* pltests/*: Added kakasi-[1-3].pl.in.

--- a/pltests/Makefile.am
+++ b/pltests/Makefile.am
@@ -4,8 +4,7 @@ AUTOMAKE_OPTIONS = 1.4 no-dependencies
 
 LOG = test-log
 INDEX = idx1 idx2 idx3 idx4 idx5 idx6 idx7 idx8 idx9 idx10 idx12 idx13 idx15 idx17 idx18 idx19 idx20 idx21 \
-	idx101 idx102 \
-	idx111 idx112
+	idx101 idx102 idx111 idx112 idx121 idx122
 TMPDATA = tmp-data
 PROGRAM = alltests.pl pltests.pl \
 	mknmz-1.pl mknmz-2.pl mknmz-4.pl \
@@ -23,7 +22,8 @@ PROGRAM = alltests.pl pltests.pl \
 	namazu-cgi-7.pl namazu-cgi-8.pl \
 	namazu-cgi-9.pl namazu-cgi-10.pl \
 	chasen-1.pl chasen-2.pl chasen-3.pl \
-	mecab-1.pl mecab-2.pl mecab-3.pl
+	mecab-1.pl mecab-2.pl mecab-3.pl \
+	kakasi-1.pl kakasi-2.pl kakasi-3.pl
 
 EXTRA_DIST = pltests.pl.in \
 	alltests.pl.in \
@@ -43,7 +43,8 @@ EXTRA_DIST = pltests.pl.in \
 	namazu-cgi-7.pl.in namazu-cgi-8.pl.in \
 	namazu-cgi-9.pl.in namazu-cgi-10.pl.in \
 	chasen-1.pl.in chasen-2.pl.in chasen-3.pl.in \
-	mecab-1.pl.in mecab-2.pl.in mecab-3.pl.in
+	mecab-1.pl.in mecab-2.pl.in mecab-3.pl.in \
+	kakasi-1.pl.in kakasi-2.pl.in kakasi-3.pl.in
 
 #CLEANFILES = $(LOG) $(INDEX) $(TMPDATA) $(PROGRAM)
 
@@ -293,6 +294,21 @@ mecab-2.pl: mecab-2.pl.in pltests.pl.in Makefile
 	chmod +x $@
 
 mecab-3.pl: mecab-3.pl.in pltests.pl.in Makefile
+	sed -e 's!%PERL%!$(PERL)!g' $@.in > $@.tmp
+	mv $@.tmp $@
+	chmod +x $@
+
+kakasi-1.pl: kakasi-1.pl.in pltests.pl.in Makefile
+	sed -e 's!%PERL%!$(PERL)!g' $@.in > $@.tmp
+	mv $@.tmp $@
+	chmod +x $@
+
+kakasi-2.pl: kakasi-2.pl.in pltests.pl.in Makefile
+	sed -e 's!%PERL%!$(PERL)!g' $@.in > $@.tmp
+	mv $@.tmp $@
+	chmod +x $@
+
+kakasi-3.pl: kakasi-3.pl.in pltests.pl.in Makefile
 	sed -e 's!%PERL%!$(PERL)!g' $@.in > $@.tmp
 	mv $@.tmp $@
 	chmod +x $@
