--- a/pltests/alltests.pl.in
+++ b/pltests/alltests.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: alltests.pl.in,v 1.4 2005-12-19 09:58:10 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: alltests.pl.in,v 1.5 2005-12-21 09:28:20 opengl2772 Exp $
+# Copyright (C) 2004,2005 Tadamasa Teranishi
+#               2004,2005 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -44,6 +44,7 @@ my @TESTS = (
     'namazu-cgi-9.pl', 'namazu-cgi-10.pl',
     'chasen-1.pl', 'chasen-2.pl', 'chasen-3.pl',
     'mecab-1.pl', 'mecab-2.pl', 'mecab-3.pl',
+    'kakasi-1.pl', 'kakasi-2.pl', 'kakasi-3.pl',
 );
 my @XFAIL_TESTS = ();
 
