--- a/pltests/mecab-2.pl.in
+++ b/pltests/mecab-2.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mecab-2.pl.in,v 1.1 2005-12-19 09:58:10 opengl2772 Exp $
-# Copyright (C) 2005 Tadamasa Teranishi
-#               2005 Namazu Project All rights reserved.
+# $Id: mecab-2.pl.in,v 1.2 2006-01-06 18:09:32 opengl2772 Exp $
+# Copyright (C) 2005-2006 Tadamasa Teranishi
+#               2005-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -72,7 +72,7 @@ if (-f $RC) {
     unlink $RC;
 }
 
-exit $status if ($status != 0);
+exit 101 if ($status != 0);
 
 #
 # Test for namazu.
