--- a/pltests/mknmz-1.pl.in
+++ b/pltests/mknmz-1.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-1.pl.in,v 1.2 2005-09-03 16:17:21 usu Exp $
-# Copyright (C) 2004-2005 Tadamasa Teranishi
-#               2004-2005 Namazu Project All rights reserved.
+# $Id: mknmz-1.pl.in,v 1.3 2006-01-06 18:09:32 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -76,8 +76,7 @@ my $origfilenum = current_dir_filenum($TARGET);
 pltests::putline($LOG, "  *** ", \@cmd);
 my $status = pltests::logsyscmd($LOG, \@cmd);
 
-#exit $status;
-exit $status if ($status != 0);
+exit 101 if ($status != 0);
 exit 1 if ($origfilenum != current_dir_filenum($TARGET));
 exit 0;
 
