--- a/pltests/mknmz-16.pl.in
+++ b/pltests/mknmz-16.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-16.pl.in,v 1.1 2004-09-30 12:34:55 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: mknmz-16.pl.in,v 1.2 2006-01-06 18:09:32 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -71,4 +71,5 @@ for($i = 1; $i <= 22; $i++) {
 pltests::putline($LOG, "", \@cmd);
 my $status = pltests::logsyscmd($LOG, \@cmd);
 
-exit $status;
+exit 101 if ($status != 0);
+exit 0;
