--- a/pltests/chasen-1.pl.in
+++ b/pltests/chasen-1.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 #
-# $Id: chasen-1.pl.in,v 1.2 2006-01-06 18:09:32 opengl2772 Exp $
+# $Id: chasen-1.pl.in,v 1.3 2006-01-07 01:30:48 opengl2772 Exp $
 # Copyright (C) 2005-2006 Tadamasa Teranishi
 #               2005-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -34,7 +34,7 @@ require 'pltests.pl';
 
 my $cwd = Cwd::getcwd();
 my $LOG = "$cwd/test-log";
-my $TARGET = pltests::selectdata();
+my $TARGET = pltests::selectdata() . "/html.html";
 my $INDEX = "$cwd/idx101";
 my $MKNMZ = pltests::binpath('mknmz');
 
@@ -92,14 +92,14 @@ if ($doc =~ /^files (\d+)/m) {
 }
 
 # Check simple searching.
-@cmd = ("$NAMAZU", "namazu", "$INDEX");
+@cmd = ("$NAMAZU", "*全* *文* *検* *索*", "$INDEX");
 pltests::putline($LOG, "  ", \@cmd);
 $status = pltests::logsyscmd($LOG, \@cmd);
 if ($status != 0) {
     exit 1;
 }
 
-@cmd = ("$NAMAZU", "-c", "namazu", "$INDEX");
+@cmd = ("$NAMAZU", "-c", "*全* *文* *検* *索*", "$INDEX");
 my $hitnum;
 my $conts_err;
 ($status, $hitnum, $conts_err) = pltests::ezsyscmd(\@cmd);
