--- a/pltests/mknmz-16.pl.in
+++ b/pltests/mknmz-16.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 #
-# $Id: mknmz-16.pl.in,v 1.2 2006-01-06 18:09:32 opengl2772 Exp $
+# $Id: mknmz-16.pl.in,v 1.3 2006-01-07 09:49:11 opengl2772 Exp $
 # Copyright (C) 2004-2006 Tadamasa Teranishi
 #               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -41,8 +41,8 @@ my $MKNMZ = pltests::binpath('mknmz');
 my @cmd;
 
 # To make messages English
-$ENV{'LANG'} = "C";
-delete $ENV{'LANGUAGE'};
+$ENV{'LANG'} = 'C';
+$ENV{'LANGUAGE'} = 'C';
 delete $ENV{'LC_ALL'};
 delete $ENV{'LC_MESSAGES'};
 delete $ENV{'LC_CTYPE'};
