--- a/pltests/namazu-cgi-7.pl.in
+++ b/pltests/namazu-cgi-7.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: namazu-cgi-7.pl.in,v 1.1 2004-09-30 12:34:55 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: namazu-cgi-7.pl.in,v 1.2 2006-01-07 09:49:11 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -41,7 +41,7 @@ my $RC = pltests::binpath('.namazurc');
 my @cmd;
 
 delete $ENV{'LANG'};
-delete $ENV{'LANGUAGE'};
+$ENV{'LANGUAGE'} = 'C';
 $ENV{'LC_ALL'} = 'C';
 delete $ENV{'LC_MESSAGE'};
 delete $ENV{'LC_CTYPE'};
