--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.169 2006-01-09 15:13:19 opengl2772 Exp $
+dnl $Id: configure.in,v 1.170 2006-01-09 17:59:06 opengl2772 Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -12,7 +12,7 @@ dnl
 dnl *
 dnl * Process this file with autoconf to produce a configure script.
 dnl *
-AC_INIT(namazu, 2.1.0)
+AC_INIT(namazu, 2.1.0, bug-namazu@namazu.org)
 AC_PREREQ(2.50)               dnl Minimum Autoconf version required.
 
 
@@ -36,10 +36,9 @@ dnl *
 dnl * Namazu Copyright.
 dnl * 
 COPYRIGHT="Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.\n\
-Copyright (C) 2000-2004 Namazu Project All rights reserved."
+Copyright (C) 2000-2006 Namazu Project All rights reserved."
 AC_SUBST(COPYRIGHT)
 AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT", [Namazu Copyright])
-
 
 dnl Checks for programs.
 AC_PROG_CC
