--- a/pltests/gcnmz-1.pl.in
+++ b/pltests/gcnmz-1.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: gcnmz-1.pl.in,v 1.1 2004-09-30 12:34:54 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: gcnmz-1.pl.in,v 1.2 2006-01-10 19:30:43 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -33,7 +33,7 @@ require Cwd;
 use File::Copy;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $TARGET = pltests::selectdata();
 my $INDEX4 = "$cwd/idx4";
@@ -50,12 +50,12 @@ pltests::putline($LOG, "  *** starting $0");
 if (-d "$INDEX") {
     unlink(<$INDEX/NMZ.*>);
 } else {
-    mkdir("$INDEX");
+    mkdir("$INDEX", 0755);
 }
 if (-d "$INDEX6") {
     unlink(<$INDEX6/NMZ.*>);
 } else {
-    mkdir("$INDEX6");
+    mkdir("$INDEX6", 0755);
 }
 # Copy idx4 for testing gcnmz.
 for my $file (<$INDEX4/*>) {
@@ -66,7 +66,7 @@ for my $file (<$INDEX4/*>) {
 if (-d "$TMPDATA") {
     unlink(<$TMPDATA/*>);
 } else {
-    mkdir("$TMPDATA");
+    mkdir("$TMPDATA", 0755);
 }
 for my $file (<$TARGET/*>) {
     copy($file, $TMPDATA);
