--- a/pltests/idxdiff-3.pl.in
+++ b/pltests/idxdiff-3.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: idxdiff-3.pl.in,v 1.2 2005-12-19 12:35:53 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: idxdiff-3.pl.in,v 1.3 2006-01-10 19:30:43 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -37,7 +37,7 @@ use File::Compare;
 use File::Basename;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $INDEX = "$cwd/idx5";
 my $INDEX2 = "$cwd/idx6";
