--- a/pltests/kakasi-3.pl.in
+++ b/pltests/kakasi-3.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: kakasi-3.pl.in,v 1.1 2005-12-21 09:28:20 opengl2772 Exp $
-# Copyright (C) 2005 Tadamasa Teranishi
-#               2005 Namazu Project All rights reserved.
+# $Id: kakasi-3.pl.in,v 1.2 2006-01-10 19:30:43 opengl2772 Exp $
+# Copyright (C) 2005-2006 Tadamasa Teranishi
+#               2005-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -37,7 +37,7 @@ use File::Compare;
 use File::Basename;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $INDEX = "$cwd/idx121";
 my $INDEX2 = "$cwd/idx122";
