--- a/pltests/mknmz-10.pl.in
+++ b/pltests/mknmz-10.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-10.pl.in,v 1.1 2004-09-30 12:34:54 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: mknmz-10.pl.in,v 1.2 2006-01-10 19:30:43 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -32,7 +32,7 @@ use strict;
 require Cwd;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $TARGET = pltests::selectdata();
 my $INDEX12 = "$cwd/idx12";
@@ -47,13 +47,13 @@ pltests::putline($LOG, "  *** starting $0");
 if (-d "$INDEX12") {
     unlink(<$INDEX12/NMZ.*>);
 } else {
-    mkdir("$INDEX12");
+    mkdir("$INDEX12", 0755);
 }
 
 if (-d "$INDEX13") {
     unlink(<$INDEX13/NMZ.*>);
 } else {
-    mkdir("$INDEX13");
+    mkdir("$INDEX13", 0755);
 }
 
 my $RC = "$cwd/tmp.mknmzrc-10";
