--- a/pltests/mknmz-12.pl.in
+++ b/pltests/mknmz-12.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-12.pl.in,v 1.1 2004-09-30 12:34:55 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: mknmz-12.pl.in,v 1.2 2006-01-10 19:30:43 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -32,7 +32,7 @@ use strict;
 require Cwd;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $TARGET = "$cwd/../tests/data/filter/";
 my $INDEX = "$cwd/idx15";
@@ -46,7 +46,7 @@ pltests::putline($LOG, "  *** starting $0");
 if (-d "$INDEX") {
     unlink(<$INDEX/NMZ.*>);
 } else {
-    mkdir("$INDEX");
+    mkdir("$INDEX", 0755);
 }
 
 my $RC = "$cwd/tmp.mknmzrc-12";
