--- a/pltests/mknmz-16.pl.in
+++ b/pltests/mknmz-16.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 #
-# $Id: mknmz-16.pl.in,v 1.3 2006-01-07 09:49:11 opengl2772 Exp $
+# $Id: mknmz-16.pl.in,v 1.4 2006-01-10 19:30:43 opengl2772 Exp $
 # Copyright (C) 2004-2006 Tadamasa Teranishi
 #               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -32,7 +32,7 @@ use strict;
 require Cwd;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $INDEX = "$cwd/idx19";
 my $TMPDATA = "$cwd/tmp-data";
@@ -52,13 +52,13 @@ pltests::putline($LOG, "  *** starting $0");
 if (-d "$INDEX") {
     unlink(<$INDEX/NMZ.*>);
 } else {
-    mkdir("$INDEX");
+    mkdir("$INDEX", 0755);
 }
 
 if (-d "$TMPDATA") {
     unlink(<$TMPDATA/.*>);
 } else {
-    mkdir("$TMPDATA");
+    mkdir("$TMPDATA", 0755);
 }
 
 my $i;
