--- a/pltests/namazu-2.pl.in
+++ b/pltests/namazu-2.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: namazu-2.pl.in,v 1.1 2004-09-30 12:34:55 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: namazu-2.pl.in,v 1.2 2006-01-10 19:30:43 opengl2772 Exp $
+# Copyright (C) 2004-2006 Tadamasa Teranishi
+#               2004-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -32,7 +32,7 @@ use strict;
 require Cwd;
 require 'pltests.pl';
 
-my $cwd = Cwd::getcwd();
+my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
 my $INDEX = "$cwd/idx1";
 my $INDEX2 = "$cwd/idx2";
