--- a/pltests/mecab-2.pl.in
+++ b/pltests/mecab-2.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 #
-# $Id: mecab-2.pl.in,v 1.4 2006-01-10 19:30:43 opengl2772 Exp $
+# $Id: mecab-2.pl.in,v 1.5 2006-01-14 08:41:21 opengl2772 Exp $
 # Copyright (C) 2005-2006 Tadamasa Teranishi
 #               2005-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -55,6 +55,15 @@ my $MECAB = "module_mecab";
 
 pltests::putline($LOG, "  *** starting $0");
 
+if (pltests::get_lang() !~ /^ja/) {
+    pltests::putline($LOG, "Skipping because of LANG does not begin with ja: $0");
+    exit 77;
+}
+
+my $ver;
+eval '$ver = $MeCab::VERSION;' or $ver = '0.00';
+pltests::putline($LOG, "MeCab : $ver");
+
 my $RC = "$cwd/tmp.mknmzrc-mecab-2";
 if (-f $RC) {
     unlink $RC;
@@ -74,6 +83,16 @@ if (-f $RC) {
 
 exit 101 if ($status != 0);
 
+my $word = pltests::cat("$INDEX/NMZ.w");
+pltests::codeconv_to_external(\$word);
+pltests::putline($LOG, "  *** NMZ.w ***");
+my @word = split(/\n/, $word);
+my $w;
+foreach $w (@word) {
+    pltests::putline($LOG, $w);
+}
+pltests::putline($LOG, "  *** NMZ.w ***");
+
 #
 # Test for namazu.
 #
@@ -92,14 +111,16 @@ if ($doc =~ /^files (\d+)/m) {
 }
 
 # Check simple searching.
-@cmd = ("$NAMAZU", "*全* *文* *検* *索*", "$INDEX");
+my $query = "*全* *文* *検* *索*";
+pltests::codeconv_to_external(\$query);
+@cmd = ("$NAMAZU", "$query", "$INDEX");
 pltests::putline($LOG, "  ", \@cmd);
 $status = pltests::logsyscmd($LOG, \@cmd);
 if ($status != 0) {
     exit 1;
 }
 
-@cmd = ("$NAMAZU", "-c", "*全* *文* *検* *索*", "$INDEX");
+@cmd = ("$NAMAZU", "-c", "$query", "$INDEX");
 my $hitnum;
 my $conts_err;
 ($status, $hitnum, $conts_err) = pltests::ezsyscmd(\@cmd);
