--- a/pltests/kakasi-2.pl.in
+++ b/pltests/kakasi-2.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 #
-# $Id: kakasi-2.pl.in,v 1.6 2006-01-14 08:41:21 opengl2772 Exp $
+# $Id: kakasi-2.pl.in,v 1.7 2006-01-15 18:33:47 opengl2772 Exp $
 # Copyright (C) 2005-2006 Tadamasa Teranishi
 #               2005-2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -135,3 +135,10 @@ if ($docnum != $hitnum) {
 }
 
 exit 0;
+
+#
+# For avoiding "used only once: possible typo at ..." warnings.
+#
+my @muda = (
+  $Text::Kakasi::VERSION,
+);
